--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,9 +12,6 @@
 }
 /* Estilos para dispositivos pequeños (smartphones) */
 @media screen and (max-width: 375px) {
-  header .navmenu {
-    padding: 25px 20px;
-  }
   .swiper-slide .text-content {
     top: 10%;
     margin: 0 20px 0 20px;
@@ -27,12 +24,12 @@
   }
   .bg-slider-thumbs {
     bottom: -15%;
+  }
+  .contact input {
+    width: 90%;
   }
 }
 @media screen and (max-width: 480px) {
-  header .navmenu {
-    padding: 25px 20px;
-  }
   .swiper-slide .text-content {
     top: 10%;
     margin: 0 20px 0 20px;
@@ -46,10 +43,15 @@
   .bg-slider-thumbs {
     bottom: -15%;
   }
-}
-@media screen and (max-width: 770px) {
-  .navmenu, .nav-icon{
-    display: none;
+  .contact input {
+    width: 100%;
   }
 }
-
+@media screen and (max-width: 840px) {
+  .navmenu {
+    display: grid;
+  }
+  .contact input {
+    width: 100%;
+  }
+}
