--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /*-----ESTILO GENERAL DE LA PAGINA----*/
 :root {
   --white-color: #fff;
@@ -50,6 +49,7 @@ header.sticky{
 }
 .navmenu {
   display: flex;
+  text-align: center;
 }
 .navmenu a {
   color: #fff;
@@ -76,6 +76,9 @@ header.sticky{
 .nav-icon i:hover {
   transform: scale(1.1);
   color: #ff0000;
+}
+.menu-icon {
+  display: none;
 }
 #menu_icon {
   font-size: 30px;
@@ -293,17 +296,27 @@ main {
   font-weight: 600;
 }
 /*-----CONTACTO Y REDES SOCIALES----*/
+.contact input{
+  background-color: #000; /* Color de fondo negro */
+    color: #fff; /* Color del texto blanco */
+    border: 1px solid #fff; /* Borde blanco */
+    padding: 10px; /* Espaciado interno */
+    width: 150%;
+}
 .contact {
-  padding: 5% 10%;
+  padding: 4% 10%;
   background-color: #000;
+  display: grid; 
+  align-items: center; 
 }
 .contact-info {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, auto));
-  gap: 3rem;
+  display: flex;
+  align-items: center; 
+  margin-bottom: 10px;
+  justify-content: center;
 }
-.first-info img {
-  width: 140px;
+.contact img {
+  width: 100px;
   height: auto;
 }
 .contact-info h4 {
@@ -325,11 +338,20 @@ main {
 .contact-info p:hover {
   color: #ff0000;
 }
-.social-icon i {
+.social-info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.contact-info .social-icon i {
   color: #fff;
   margin-right: 10px;
-  font-size: 20px;
+  font-size: 25px;
   transition: all 0.42s;
+}
+.social-icon{
+  text-align: right;
 }
 .social-icon i:hover {
   transform: scale(1.3);
